--- a/src/Plugin.Multilingual.Mac/Plugin.Multilingual.Mac.csproj
+++ b/src/Plugin.Multilingual.Mac/Plugin.Multilingual.Mac.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Globalization" />
     <Reference Include="Xamarin.Mac" />
   </ItemGroup>
   <ItemGroup>
